fixed alignment for blocks 2

--- a/components/AdvantagesBlock/AdvantagesBlock.module.css
+++ b/components/AdvantagesBlock/AdvantagesBlock.module.css
@@ -15,6 +15,11 @@
     background-position: 10% center;
 }
 
+.advantages__item--right {
+    align-items: flex-end;
+    text-align: right;
+}
+
 .advantages__item:last-child {
     margin-bottom: 0;
 }
@@ -65,11 +70,16 @@
         justify-content: flex-end;
     }
 
+    .advantages__item--right {
+        justify-content: flex-end;
+        text-align: left;
+    }
+
     .advantages__item-text {
         font-size: 28px;
         line-height: 32px;
         margin-bottom: 10px;
-        max-width: 350px;
+        max-width: 320px;
     }
     
     .advantage__item--1-background {
