--- a/components/QuoteBlock/QuoteBlock.module.css
+++ b/components/QuoteBlock/QuoteBlock.module.css
@@ -70,7 +70,7 @@
     .quote__description {
         text-align: left;
          font-size: 16px;
-        line-height: 20px;
+        line-height: 25px;
     }
 
     .quote__content-inner {
